[package]
authors = ["Carson <c@rson.riker.me>", "Darren.Schroeder"]
description = "A nushell plugin for enumerating network interfaces in a platform-agnostic way"
edition = "2021"
homepage = "https://github.com/fennewald/nu_plugin_pnet"
keywords = ["network", "nushell", "plugin"]
license = "MIT"
name = "nu_plugin_pnet"
readme = "README.md"
repository = "https://github.com/fennewald/nu_plugin_pnet"
version = "1.2.0"

[dependencies]
nu-plugin = { version = "0.83.1", path = "../nushell/crates/nu-plugin" }
nu-protocol = { version = "0.83.1", features = ["plugin"], path = "../nushell/crates/nu-protocol" }
pnet = { version = "0.33.0", features = ["std"] }
