[package]
authors = ["Carson <c@rson.riker.me>", "Darren.Schroeder"]
description = "A nushell plugin for enumerating network interfaces in a platform-agnostic way"
edition = "2021"
homepage = "https://github.com/fennewald/nu_plugin_pnet"
keywords = ["network", "nushell", "plugin"]
license = "MIT"
name = "nu_plugin_pnet"
readme = "README.md"
repository = "https://github.com/fennewald/nu_plugin_pnet"
version = "1.5.0"

[dependencies]
nu-plugin = { path = "../nushell/crates/nu-plugin", version = "0.90.2" }
nu-protocol = { path = "../nushell/crates/nu-protocol", version = "0.90.2", features = [
    "plugin",
] }
pnet = { version = "0.34.0", features = ["std"] }
